<?xml version="1.0"?>
<package format="3">
  <name>mujoco_ros_sim_msgs</name>
  <version>0.0.1</version>
  <description>Messages for MuJoCo and controller comms</description>
  <maintainer email="yoon98@snu.ac.kr">JunheonYoon</maintainer>
  <license>BSD-3-Clause</license>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
</package>
